# GitWyrm

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/: launch.json
.design-sync/: NOTES.md  config.json  conventions.md  ds-theme-surface.tsx
.design-sync/previews/: Avatar.tsx  Button.tsx  ChangeSizeIndicator.tsx  Collapsible.tsx  ContextMenu.tsx  Dialog.tsx  DiffLineMenu.tsx  DropdownMenu.tsx  FormDialog.tsx  GithubIcon.tsx  HoverCard.tsx  HunkBar.tsx  Input.tsx  LineSelectionBar.tsx  PendingIndicator.tsx  PendingMenuItem.tsx  Popover.tsx  ResizeHandle.tsx  ScrollArea.tsx  SectionItemRow.tsx  Separator.tsx  Slider.tsx  StatusBadge.tsx  Textarea.tsx  Tooltip.tsx  TooltipButton.tsx
.design-sync/scripts/: gen-barrel.mjs  gen-srcmap.mjs  gen-upload-list.mjs  merge-config.mjs  stage-css.mjs
.github/scripts/: changelog-items.sh  fix-updater-manifest.sh  render-changelog.sh  resolve-updater-urls.sh  upload-changelog.sh
.github/workflows/: bootstrapper.yml  release.yml
docs/: accent-color-comparison-v2.html  accent-color-comparison.html  add-repository-mockup.html  ai-processing-mockups.html  change-size-column-mockup.html  change-size-mockup.css  change-size-mockup.js  change-size-story-mockup.html  download-site-mockup.html  github-prs-issues-mockup.html  sync-feedback-mockups.html  tab-groups-mockup.html
scripts/: free-port.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bootstrapper/: Cargo.toml  build.rs
src-tauri/bootstrapper/src/: main.rs  paint.rs  window.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  settings.rs  state.rs  watcher.rs
src-tauri/src/ai/: auth.rs  catalog.rs  client.rs  copilot.rs  mod.rs  models.rs  prompt.rs
src-tauri/src/commands/: ai.rs  ai_commits.rs  app.rs  branch.rs  commit.rs  diff.rs  external.rs  file.rs  github.rs  gitignore.rs  log.rs  merge.rs  mod.rs  patch.rs  remote.rs  repo.rs  repo_icon.rs  scan.rs  staging.rs  stash.rs  status.rs  submodule.rs
src-tauri/src/git/: graph.rs  merge_ops.rs  mod.rs  refs.rs  shell.rs  submodule.rs  types.rs
src-tauri/tests/: branch_switch.rs  merge.rs  mutations.rs  push_outcome.rs  real_repo.rs  scan.rs  submodule.rs  untracked_diff.rs
src/components/: CrashTitleBar.tsx  ErrorBoundary.tsx  _ds_barrel.ts
src/hooks/: useAi.ts  useFont.ts  useGitMutations.ts  useGitQueries.ts  useGithub.ts  useRefDnd.ts  useRepoActions.ts  useRepoWatcher.ts  useTagSync.ts  useTheme.ts  useUpdater.ts
src/layouts/: WorkspaceLayout.tsx
src/lib/: authorProfile.ts  avatarSource.ts  bindings.ts  branchActions.ts  branchTree.ts  clipboard.ts  env.ts  errorClass.ts  fonts.ts  gitDisplay.ts  githubDisplay.tsx  graphColumns.ts  log.ts  paths.ts  perf.ts  queryKeys.ts  refName.ts  refSync.ts  remoteProvider.tsx  remoteWeb.ts  repositoryPreviews.ts  semver.ts  sentry.ts  themeLab.ts  themes.ts  types.ts
src/stores/: dragStore.ts  uiStore.ts  workspaceStore.ts
src/views/: BlameView.tsx  ConflictView.tsx  DiffView.tsx  FileHistoryView.tsx  GithubView.tsx  GraphView.tsx  SettingsView.tsx
(+98 files in other folders)
