[package]
name = "gitwyrm-setup"
version = "1.0.0"
edition = "2021"
description = "GitWyrm installer bootstrapper"
authors = ["GitWyrm"]

[[bin]]
name = "gitwyrm-setup"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
dirs = "6"
png = "0.17"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
